@@ -1,3 +1,11 @@
+2008-09-03  Alejandro Pinheiro  <apinheiro@igalia.com>
+
+	* src/hildon-touch-selector.c
+	(hildon_date_touch_selector_get_selected): fix the selection mode check,
+	in order to allow use this function on multiple row selection mode if
+	the column is different that the first one
+	Fixes: NB#88047
+
 2008-09-03  Claudio Saavedra  <csaavedra@igalia.com>
 
 	* src/hildon-time-selector.c: (_custom_print_func): Change the logical ids
